# doxa-bot

./: .gitignore  .gitsigners  Cargo.toml  LICENSE.md  README.md  deny.toml  example.json
.github/workflows/: build.yml  clippy.yml
libs/utility/: Cargo.toml
libs/utility/src/: lib.rs  mongoutil.rs
src/: main.rs
src/modules/: mod.rs  structs.rs
src/modules/commands/: common.rs  mod.rs  streamer.rs
src/modules/utilities/: doxautil.rs  mod.rs
