[package]
name = "doxa-bot"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelab/rust-template"
documentation = "https://docs.rs/rust-template"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
mongodb = "2.2.0"
chrono = "0.4"
tokio = { version = "1.17.0", features = ["full"] }
sha3 = "0.10"
rand = "0.8"
futures = "0.3.21"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
utility = { git = "https://github.com/misilelab/UsefulSerenity", package = "useful-serenity"}

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "collector", "chrono"]
git = "https://github.com/serenity-rs/serenity"
