[package]
name = "doxa-bot"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelab/rust-template"
documentation = "https://docs.rs/rust-template"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
futures = "0.3.21"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
misile_lib = { git = "https://github.com/misilelab/misilelib", features = ["config"] }
serde = { version = "1.0", features = ["derive"] }
